web-platform/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fivoria
  labels:
    name: fivoria
    environment: production
